<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright 2020 Samuel Jones

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License. -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/settingsFragment"
        android:name="uk.ac.aber.dcs.mmp.faa.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/settings_fragment" />
    <fragment
        android:id="@+id/myAccountFragment"
        android:name="uk.ac.aber.dcs.mmp.faa.ui.account.MyAccountFragment"
        android:label="Account Details"
        tools:layout="@layout/my_account_fragment" />
    <fragment
        android:id="@+id/helpFragment"
        android:name="uk.ac.aber.dcs.mmp.faa.ui.help.HelpFragment"
        android:label="Help"
        tools:layout="@layout/help_fragment" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="uk.ac.aber.dcs.mmp.faa.ui.about.AboutFragment"
        android:label="About"
        tools:layout="@layout/about_fragment" />
    <fragment
        android:id="@+id/feedbackFragment"
        android:name="uk.ac.aber.dcs.mmp.faa.ui.feedback.FeedbackFragment"
        android:label="Feedback"
        tools:layout="@layout/feedback_fragment" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="uk.ac.aber.dcs.mmp.faa.ui.home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/home_fragment" >
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_myAccountFragment"
            app:destination="@id/myAccountFragment" />
        <action
            android:id="@+id/action_homeFragment_to_helpFragment"
            app:destination="@id/helpFragment" />
        <action
            android:id="@+id/action_homeFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_homeFragment_to_feedbackFragment"
            app:destination="@id/feedbackFragment" />
        <action
            android:id="@+id/action_homeFragment_to_savedFragment"
            app:destination="@id/savedFragment" />
        <action
            android:id="@+id/action_homeFragment_to_findCatFragment"
            app:destination="@id/findCatFragment" />
        <action
            android:id="@+id/action_homeFragment_to_adoptionStatusInfoViewFragment"
            app:destination="@id/adoptionStatusInfoViewFragment" />
        <action
            android:id="@+id/action_homeFragment_to_catCardInfoFragment"
            app:destination="@id/catCardInfoFragment" />
        <action
            android:id="@+id/action_homeFragment_to_adoptionForm"
            app:destination="@id/adoptionForm" />
        <action
            android:id="@+id/action_homeFragment_to_adoptionFormConfirmation"
            app:destination="@id/adoptionFormConfirmation" />
        <action
            android:id="@+id/action_homeFragment_to_cancel_adoption_dialog"
            app:destination="@id/cancel_adoption_dialog" />
    </fragment>
    <fragment
        android:id="@+id/savedFragment"
        android:name="uk.ac.aber.dcs.mmp.faa.ui.saved.SavedFragment"
        android:label="Saved Cats"
        tools:layout="@layout/saved_fragment" />
    <fragment
        android:id="@+id/findCatFragment"
        android:name="uk.ac.aber.dcs.mmp.faa.ui.findcat.FindCatFragment"
        android:label="Find A Cat Tool"
        tools:layout="@layout/find_cat_fragment" />
    <fragment
        android:id="@+id/adoptionStatusInfoViewFragment"
        android:name="uk.ac.aber.dcs.mmp.faa.ui.adoption.AdoptionStatusInfoViewFragment"
        android:label="Adoption Status Info"
        tools:layout="@layout/adoption_status_info_view_fragment" />
    <fragment
        android:id="@+id/catCardInfoFragment"
        android:name="uk.ac.aber.dcs.mmp.faa.ui.catinfo.CatCardInfoFragment"
        android:label="More Info"
        tools:layout="@layout/cat_card_info_fragment" />
    <fragment
        android:id="@+id/adoptionForm"
        android:name="uk.ac.aber.dcs.mmp.faa.ui.adoption.AdoptionForm"
        android:label="Adoption Form"
        tools:layout="@layout/fragment_adoption_form" />
    <fragment
        android:id="@+id/adoptionFormConfirmation"
        android:name="uk.ac.aber.dcs.mmp.faa.ui.adoption.AdoptionFormConfirmation"
        android:label="Adoption Confirmation"
        tools:layout="@layout/fragment_adoption_form_confirmation" />
    <dialog
        android:id="@+id/cancel_adoption_dialog"
        android:name="uk.ac.aber.dcs.mmp.faa.ui.adoption.CancelAdoptionDialog"
        android:label="Adoption Cancellation confirmation"
        tools:layout="@layout/fragment_cancel_adoption_dialog" />
</navigation>