...
   limitations under the License. -->

<resources>
    <string name="app_name">Feline Adoption Agency</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="cat_finder">Cat Finder</string>
    <string name="saved_cats">Saved Cats</string>
    <string name="settings">Settings</string>
    <string name="versionString">Version: 1.0 (Release)</string>
    <string name="login">Login</string>
    <string name="about">About</string>
    <string name="help">Help</string>
...
